<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/tambahkan_kontak_anda"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/masukkan_nim"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama_mahasiswa"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_kelas"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_telepon"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/sosmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama_media_sosial_pribadi"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnTampil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_mahasiswa"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</RelativeLayout>